Use simplified collector